# HybridNets

./: .gitignore  README.md  backbone.py  backbone_old.py  coco_eval.py  efficientdet_test.py  efficientdet_test_videos.py  export.py  hubconf.py  hybridnets_test.py  hybridnets_test_videos.py  pth2onnx.py  pth2onnx.py.620fc128fce35e1eec1b92955c14cdac.tmp  requirements.txt  train.py  train_ddp.py  val.py  val_ddp.py
efficientdet/: autoanchor.py  backbone.py  backbone_old.py  dataset.py  efficientdet_test.py  hybridnets_eval.py  loss.py  model.py  requirements.txt  train.py  train_orgiinal.py  val.py  yolop_cfg.py  yolop_utils.py
efficientdet/efficientdet/: AutoDriveDataset.py  autoanchor.py  bdd.py  convert.py  dataset.py  initialize.py  loss.py  segmentation_head.py  yolop_cfg.py  yolop_utils.py
efficientdet/efficientnet/: utils.py
efficientdet/projects/: bdd100k_effdet.yml
efficientdet/utils/: dice_loss.py  dice_loss_old.py  focal_loss.py  lovasz_loss.py  smp_metrics.py  tversky_loss.py  utils.py
encoders/: __init__.py  hrnet.py  timm_efficientnet.py
hybridnets/: autoanchor.py  custom_dataset.py  dataset.py  loss.py  model.py
projects/: bdd100k.yml  bdd100k_effdet.yml
ros/: .gitignore  CMakeLists.txt  extract_prior_box.py  package.xml  readme.md
ros/include/hybridnets_cpp/: detector.h  prior_bbox.h  utils.h
ros/src/: detector.cpp  main.cpp  utils.cpp
tutorial/: HybridNets_tutorial.ipynb
utils/: constants.py  plot.py  utils.py
yolop/: hubconf.py  requirements.txt
yolop/lib/config/: default.py
yolop/lib/core/: function.py
yolop/tools/: train.py
(+4 files in other folders)
